--- a/silly-canny-lib/index.html
+++ b/silly-canny-lib/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!-- index.html -->
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>silly-canny-lib</title>
+    <title>silly-canny-lib dev</title>
   </head>
   <body>
     <div id="app"></div>
